--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "server": "json-server data/db.json --port 3000",
-    "start": "concurrently \"npm run dev\" \"npm run server\"",
+    "start": "json-server --watch db.json --port 10000",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix"
