--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "server": "json-server data/db.json --port 3000",
-    "start": "json-server --watch db.json --port 10000",
+    "start": "json-server  data/db.json --port 10000",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix"
